my first website

--- a/w1/index.html
+++ b/w1/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Week 1">
+    <meta name="author" content="Stephen Meade">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SE111|W1</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+<div>
+<h1>Stephen Meade</h1>
+<p>Hi, my name is <u>Stephen</u>. I am from <b>Attleboro Massachusetts</b>
+I graduated Highschool last year, and <i>NEIT</i> was my first choice of 
+schools. I am here for cyber security and it is my second term here.
+I live in the residence hall and I've really enjoyed the time I've spent 
+here so far. I like the lab time and classes so far.<p>
+
+
+</div>
 </body>
 </html>
