--- a/w4-movie/cast.html
+++ b/w4-movie/cast.html
@@ -41,8 +41,33 @@
 
                 <div class="character">
 
-                    <h3>Anakin Skywalker</h3>
+                    <h3>Anakin Skywalker </h3>
                     <img src "image" image alt= "Anakin Skywalker, played by Hayden Christensen" height="50">
+                    <h4>Portrayed by Hayden Christensen</h4>
+                    <hr>
+                    <h3>Obi-Wan Kenobi</h3>
+                    <img src "image" image alt= "Obi-Wan Kenobi, played by Ewan McGregor" height="50">
+                    <h4>Portrayed by Ewan McGregor</h4>
+                    <hr>
+                    <h3>Chancellor Palpatine</h3>
+                    <img src "image" image alt= "Chancellor Palpatine played by Ian McDiarmid" height="50">
+                    <h4>Portrayed by Ian McDiarmid</h4>
+                    <hr>
+                    <h3>General Grievous</h3>
+                    <img src "image" img alt= "General Grievous voiced by Matthew Wood" height="50">
+                    <h4>Voiced by Matthew Wood</h4>
+                    <hr>
+                    <h3>Mace Windu</h3>
+                    <img src "image" img alt= "Mace Windu played by Samuel L Jackson" height="50">
+                    <h4>Portrayed by Samuel L Jackson</h4>
+                    <hr>
+                    <h3>Count Dooku</h3>
+                    <img src "image" img alt= "Count Dooku played by Christopher Lee" height= "50">
+                    <h4>Portrayed by Christopher Lee</h4>
+                    <hr>
+                    <h3>Padme Amidala</h3>
+                    <img src "image" img alt= "padme Amidala played by Natalie Portman" height= "50">
+                    <h4>Portrayed by Natalie Portman</h4>
 
 
 
