--- a/w4-movie/index.html
+++ b/w4-movie/index.html
@@ -10,12 +10,26 @@
             border: solid black;
             padding:10px;
             margin-bottom:10px;
+            background-color: rgb(58, 53, 53);
+            
         }
         #container {
             width: 980px;
             margin: auto;
+        
 
         }
+        #trailerdiv{
+            width: 560px;
+            height: 315px;
+            margin: auto;
+        }
+        p{color: white;}
+        h1{color: white; text-align: center;}
+        h2{color: white;}
+        a{color: white;}
+        body{background-color: black;}
+
 
 
     </style>
@@ -33,8 +47,12 @@
                 <a href="review.html">REVIEW</a>
             </div> <!--Nav-->
             <hr>
+            <div id= "trailerdiv">
+                <iframe id="trailer" width="560" height="315" src="https://www.youtube.com/embed/5UnjrG_N8hU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <div id="content">
                 <h2>About <em>Revenge of the Sith</em></h2>
+                <p>Star Wars episode 3: Revenge of the Sith </p>
 
             </div> <!--Content-->
             <div id="Footer">
