--- a/w4-movie/review.html
+++ b/w4-movie/review.html
@@ -10,12 +10,19 @@
             border: solid black;
             padding:10px;
             margin-bottom:10px;
+            background-color: rgb(58, 53, 53);
         }
         #container {
             width: 980px;
             margin: auto;
 
         }
+        p{color: white;}
+        h1{color: white; text-align: center;}
+        h2{color: white;}
+        a{color: white;}
+        body{background-color: black;}
+
 
 
     </style>
