--- a/w4-movie/cast.html
+++ b/w4-movie/cast.html
@@ -10,6 +10,7 @@
             border: solid black;
             padding:10px;
             margin-bottom:10px;
+            background-color: rgb(58, 53, 53);
         }
         #container {
             width: 980px;
@@ -19,6 +20,12 @@
         .character {
             border:none;
         }
+        p{color: white;}
+        h1{color: white; text-align: center;}
+        h2{color: white;}
+        a{color: white;}
+        body{background-color: black;}
+
 
 
     </style>
