--- a/w4-movie/index.html
+++ b/w4-movie/index.html
@@ -52,7 +52,10 @@
             </div>
             <div id="content">
                 <h2>About <em>Revenge of the Sith</em></h2>
-                <p>Star Wars episode 3: Revenge of the Sith </p>
+                <p>Three years into the clone wars, the republic is still in a major conflict with 
+                    the seperatists. With Obi-Wan pursuing a new threat, Struggling with rules layed out by the 
+                    jedi order and his immense fear of losing his wife Padme Anakin Skywalker is stuck between the 
+                    jedi council and a plot to destroy the republic and rule the galaxy.   </p>
 
             </div> <!--Content-->
             <div id="Footer">
