--- a/w4-movie/cast.html
+++ b/w4-movie/cast.html
@@ -25,6 +25,8 @@
         h2{color: white;}
         a{color: white;}
         body{background-color: black;}
+        h3{color: white;}
+        h4{color: white;}
 
 
 
@@ -49,31 +51,31 @@
                 <div class="character">
 
                     <h3>Anakin Skywalker </h3>
-                    <img src "image" image alt= "Anakin Skywalker, played by Hayden Christensen" height="50">
+                    <img src="images/anakin.png" image alt= "Anakin Skywalker, played by Hayden Christensen" height="200" width="250">
                     <h4>Portrayed by Hayden Christensen</h4>
                     <hr>
                     <h3>Obi-Wan Kenobi</h3>
-                    <img src "image" image alt= "Obi-Wan Kenobi, played by Ewan McGregor" height="50">
+                    <img src="images/Obiwan.jpg" image alt= "Obi-Wan Kenobi, played by Ewan McGregor" height="200" width="250">
                     <h4>Portrayed by Ewan McGregor</h4>
                     <hr>
                     <h3>Chancellor Palpatine</h3>
-                    <img src "image" image alt= "Chancellor Palpatine played by Ian McDiarmid" height="50">
+                    <img src="images/Palpitine.jpg" image alt= "Chancellor Palpatine played by Ian McDiarmid" height="200" width="250">
                     <h4>Portrayed by Ian McDiarmid</h4>
                     <hr>
                     <h3>General Grievous</h3>
-                    <img src "image" img alt= "General Grievous voiced by Matthew Wood" height="50">
+                    <img src="images/grievous_wood.jpg" img alt= "General Grievous voiced by Matthew Wood" height="200" width="400">
                     <h4>Voiced by Matthew Wood</h4>
                     <hr>
                     <h3>Mace Windu</h3>
-                    <img src "image" img alt= "Mace Windu played by Samuel L Jackson" height="50">
+                    <img src="images/Mace_Windu.jpg" img alt= "Mace Windu played by Samuel L Jackson" height="300" width="250">
                     <h4>Portrayed by Samuel L Jackson</h4>
                     <hr>
                     <h3>Count Dooku</h3>
-                    <img src "image" img alt= "Count Dooku played by Christopher Lee" height= "50">
+                    <img src="images/Count_Dooku.jpg" img alt= "Count Dooku played by Christopher Lee" height="300" width="250">
                     <h4>Portrayed by Christopher Lee</h4>
                     <hr>
                     <h3>Padme Amidala</h3>
-                    <img src "image" img alt= "padme Amidala played by Natalie Portman" height= "50">
+                    <img src= "images/Padme.jpg" img alt= "padme Amidala played by Natalie Portman" height="300" width="250">
                     <h4>Portrayed by Natalie Portman</h4>
 
 
