--- a/w4-movie/index.html
+++ b/w4-movie/index.html
@@ -29,6 +29,10 @@
         h2{color: white;}
         a{color: white;}
         body{background-color: black;}
+        #poster{margin: auto; height: 500px; width: 350px;}
+        #rotsposter{ height: 500px; width:auto}
+        #valid {height: 200px; width: auto;}
+
 
 
 
@@ -46,22 +50,29 @@
                 <a href="cast.html">CAST</a>
                 <a href="review.html">REVIEW</a>
             </div> <!--Nav-->
-            <hr>
-            <div id= "trailerdiv">
-                <iframe id="trailer" width="560" height="315" src="https://www.youtube.com/embed/5UnjrG_N8hU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
             <div id="content">
                 <h2>About <em>Revenge of the Sith</em></h2>
                 <p>Three years into the clone wars, the republic is still in a major conflict with 
                     the seperatists. With Obi-Wan pursuing a new threat, Struggling with rules layed out by the 
                     jedi order and his immense fear of losing his wife Padme Anakin Skywalker is stuck between the 
-                    jedi council and a plot to destroy the republic and rule the galaxy.   </p>
-
+                    jedi council and a plot to destroy the republic and rule the galaxy. This sci-fi/action film was produced by Lucasfilm
+                in 2005. It has a run time of 2 hours and 20 minutes and is rated PG-13. </p>
             </div> <!--Content-->
+            <hr>
+            <div id="poster">
+                <img id="rotsposter" src="images/ROTS poster.png" alt="Revenge of the sith poster">
+            </div>
+            <div id= "trailerdiv">
+                <iframe id="trailer" width="560" height="315" src="https://www.youtube.com/embed/5UnjrG_N8hU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div id="validation">
+                <img id="valid" src="images/Validationreview.jpg">
+            </div>
             <div id="Footer">
                 <a href="#header">BACK TO TOP</a>
                 <p>&copy; 2022 | S Meade | SE111.21</p>
             </div>
+
     </div>
 </body>
 </html>
